--- a/camping/resources/views/home.edge
+++ b/camping/resources/views/home.edge
@@ -61,6 +61,21 @@
 </div>
 </div>
 
+{{-- posts started   --}}
+<div class="max-w-7xl mx-auto mt-20">
+  <div class="grid grid-cols-3 gap-8">
+    @each(item in posts)
+      <div>
+        <img src="{{ item.post_image }}" alt="">
+        <h1 class="mt-6 mb-4 text-[25px] font-bold text-center">{{ item.title }}</h1>
+        <h2 class="text-center text-[15px] text-gray-600">{{ item.content }}</h2>
+      </div>
+  @end
+  </div>
+</div>
+
+{{--  instagram posts started  --}}
+
 
 @include('partials/footer')
 
