about-us started

--- a/camping/resources/views/home.edge
+++ b/camping/resources/views/home.edge
@@ -62,7 +62,7 @@
 </div>
 
 {{-- posts started   --}}
-<div class="max-w-7xl mx-auto mt-20">
+<div class="max-w-7xl mx-auto mt-20 mb-12">
   <div class="grid grid-cols-3 gap-8">
     @each(item in posts)
       <div>
