--- a/camping/resources/views/partials/bottom_nav.edge
+++ b/camping/resources/views/partials/bottom_nav.edge
@@ -1,3 +1,59 @@
-<div class="bg-green-950 h-10">
+<div class="bg-green-950">
+  <div class="max-w-7xl mx-auto">
 
+    <div class="text-white grid grid-cols-4 py-20">
+
+      <div>
+        <div>
+          <h1 class="text-xl font-semibold mb-6">This is Kamperen</h1>
+          <p class="text-[#bcbcbc] mb-6">Kamperen is equipped with everythig required for an amazing campground business website. Set up camp now.</p>
+        </div>
+        <div>
+          <h2 class="text-xl font-semibold mb-6">Get Social</h2>
+          <ul class="flex items-center gap-4">
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><i class="fa-brands fa-youtube"></i></li>
+            <li><i class="fa-brands fa-x-twitter"></i></li>
+          </ul>
+        </div>
+      </div>
+
+      <div>
+        <h2 class="text-xl font-semibold mb-6">
+          Contact
+        </h2>
+       <ul class="flex flex-col gap-y-4 mb-6 text-[#bcbcbc]">
+        <li>P: +31 555 777 83</li>
+        <li>App: Viber, WhatsApp</li>
+        <li>E: kamperen@qode.com</li>
+       </ul>
+       <a href="/#" class="">harita</a>
+      </div>
+
+      <div>
+        <h1 class="text-xl font-semibold mb-6">Links</h1>
+        <ul class="flex flex-col gap-y-3 text-[#bcbcbc]">
+          <li><a href="/">About Us</a></li>
+          <li><a href="/">Camp Accommodation</a></li>
+          <li><a href="/">Nearby Activities</a></li>
+          <li><a href="/">Booking</a></li>
+          <li><a href="/">Contact Us</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h1 class="text-xl font-semibold mb-6">Newsletter</h1>
+        <p class="mb-6">Sign up for our newsletter and get updated about our latest promotions
+
+        </p>
+        <form action="#">
+          <input type="email" placeholder="Your Email" class="border-b bg-transparent border-white w-full py-3 px-1 outline-none">
+          <button type="button" class="bg-[#bcbcbc] text-black font-bold hover:bg-transparent hover:text-white hover:border border-white duration-200 p-2 w-full mt-4">Submit</button>
+        </form>
+      </div>
+
+    </div>
+
+  </div>
 </div>
