--- a/camping/resources/views/about_us.edge
+++ b/camping/resources/views/about_us.edge
@@ -1,3 +1,56 @@
 @include('partials/header')
-a
+{{--  banner  --}}
+<div id="banner" class="relative h-[371px]">
+  <div class="w-full h-full bg-black absolute z-10 bg-opacity-60"></div>
+  <img src="/uploads/about-banner.jpg" alt="" class="absolute w-full h-full">
+  <div class="relative z-20 flex justify-center items-center w-full h-full flex-col">
+    <h4 class="text-white text-5xl font-bold">About Us</h4>
+    <div class="flex gap-2 mt-4 text-white text-lg items-center">
+      <a href="/" class="hover:underline">Home</a>
+      <i class="fa-solid fa-chevron-right"></i>
+      <a href="#" class="hover:underline">About Us</a>
+    </div>
+  </div>
+</div>
+
+{{--  About  --}}
+<div id="about" class="max-w-7xl mx-auto py-20 h-full">
+  <div class="flex gap-10 h-full w-full">
+    <div class="flex h-full justify-center flex-col ">
+      <h1 class="text-7xl font-bold">About</h1>
+      <h2 class="mt-8">Oh feel if up to till like. He an thing rapid these after going drawn or. Timed she his law the spoil round defer. In surprise concerns informed betrayed he learning is ye. Ignorant formerly so ye blessing.</h2>
+      <h2 class="font-bold mt-6">He as spoke avoid given downs money on we. Of properly carriage shutters ye as wandered up repeated moreover.</h2>
+    </div>
+    <div class="h-full">
+      <div class="flex gap-x-6 mb-10">
+        <div>
+          <i class="fa-solid fa-tents text-7xl text-green-600"></i>
+        </div>
+        <div>
+          <h1 class="mb-4 text-xl font-semibold">Tents</h1>
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+      <div class="flex gap-x-6 mb-10">
+        <div>
+          <i class="fa-solid fa-road text-7xl text-green-600"></i>
+        </div>
+        <div>
+          <h1 class="mb-4 text-xl font-semibold">Routes</h1>
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+      <div class="flex gap-x-6 mb-10">
+        <div>
+          <i class="fa-regular fa-heart text-7xl text-green-600"></i>
+        </div>
+        <div>
+          <h1 class="mb-4 text-xl font-semibold">Heart</h1>
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 @include('partials/footer')
