--- a/camping/resources/views/partials/header.edge
+++ b/camping/resources/views/partials/header.edge
@@ -25,7 +25,7 @@
   />
 </head>
 <body>
-<header class="h-[86px] flex justify-between items-center px-6">
+<header class="h-[86px] flex justify-between items-center px-6 relative z-[9999]">
   <div class="flex gap-x-2 items-end bg-white">
     <div class="text-2xl font-semibold"><a href="/">Camping</a></div>
     <div class="ml-10 pr-4">
