--- a/camping/resources/views/activities.edge
+++ b/camping/resources/views/activities.edge
@@ -2,13 +2,13 @@
 {{--  banner  --}}
 <div id="banner" class="relative h-[371px]">
   <div class="w-full h-full bg-black absolute z-10 bg-opacity-60"></div>
-  <img src="/uploads/about-banner.jpg" alt="" class="absolute w-full h-full">
+  <img src="https://kamperen.qodeinteractive.com/wp-content/uploads/2021/06/Activities-title-img.jpg" alt="" class="absolute w-full h-full">
   <div class="relative z-20 flex justify-center items-center w-full h-full flex-col">
-    <h4 class="text-white text-5xl font-bold">About Us</h4>
+    <h4 class="text-white text-5xl font-bold">Activities</h4>
     <div class="flex gap-2 mt-4 text-white text-lg items-center">
       <a href="/" class="hover:underline">Home</a>
       <i class="fa-solid fa-chevron-right"></i>
-      <a href="#" class="hover:underline">About Us</a>
+      <a href="#" class="hover:underline">Activities</a>
     </div>
   </div>
 </div>
@@ -17,7 +17,7 @@
 <div id="about" class="max-w-7xl mx-auto py-20 h-full">
   <div class="flex gap-10 h-full w-full items-center">
     <div class="flex h-full justify-center flex-col ">
-      <h1 class="text-center text-7xl font-bold text-gray-200/70 leading-[1px]">About</h1>
+      <h1 class="text-7xl font-bold">About</h1>
       <h2 class="mt-8">Oh feel if up to till like. He an thing rapid these after going drawn or. Timed she his law the spoil round defer. In surprise concerns informed betrayed he learning is ye. Ignorant formerly so ye blessing.</h2>
       <h2 class="font-bold mt-6">He as spoke avoid given downs money on we. Of properly carriage shutters ye as wandered up repeated moreover.</h2>
     </div>
