--- a/camping/resources/views/partials/bottom_nav.edge
+++ b/camping/resources/views/partials/bottom_nav.edge
@@ -1,4 +1,4 @@
-<div class="bg-green-950">
+<div class="bg-[#1c231f]">
   <div class="max-w-7xl mx-auto">
 
     <div class="text-white grid grid-cols-4 py-20">
