--- a/camping/resources/views/partials/header.edge
+++ b/camping/resources/views/partials/header.edge
@@ -34,7 +34,7 @@
         <li class="uppercase  hover:border-b hover:border-black duration-300 px-4 {{title === 'pages' ? 'border-b border-black' : ''}} relative group"><a href="/#">pages
           <ul class="absolute z-10 bg-white p-4 flex flex-col w-[200px] gap-2 border border-gray-300 top-[70px] left-0 group-hover:top-[51.5px] duration-300 opacity-0 invisible group-hover:visible ease-in-out group-hover:opacity-100">
               <li class="hover:bg-gray-200 p-2"><a href="/about_us">About Us</a></li>
-              <li class="hover:bg-gray-200 p-2">Activities</li>
+              <li class="hover:bg-gray-200 p-2"><a href="/activities">Activities</a></li>
           </ul>
         </a>
       </li>
