--- a/camping/resources/views/partials/header.edge
+++ b/camping/resources/views/partials/header.edge
@@ -35,6 +35,7 @@
           <ul class="absolute z-10 bg-white p-4 flex flex-col w-[200px] gap-2 border border-gray-300 top-[70px] left-0 group-hover:top-[51.5px] duration-300 opacity-0 invisible group-hover:visible ease-in-out group-hover:opacity-100">
               <li class="hover:bg-gray-200 p-2"><a href="/about_us">About Us</a></li>
               <li class="hover:bg-gray-200 p-2"><a href="/activities">Activities</a></li>
+              <li class="hover:bg-gray-200 p-2"><a href="/contact">Contact</a></li>
           </ul>
         </a>
       </li>
