--- a/camping/resources/views/gallery.edge
+++ b/camping/resources/views/gallery.edge
@@ -1,4 +1,34 @@
 @include('partials/header')
 
-</body>
-</html>
+
+{{--  galery  --}}
+<div class="max-w-7xl mx-auto py-20 h-full">
+  <div class="grid-cols-1 md:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 gap-10 p-10 columns-[300px]">
+    <div class="break-inside-avoid h-[420px] flex justify-center items-center text-white bg-yellow-400 p-20 mb-10 text-2xl rounded-2xl">
+      1
+    </div>
+    <div class="break-inside-avoid h-[340px] flex justify-center items-center text-white bg-red-400 p-20 mb-10 text-2xl rounded-2xl">
+      2
+    </div>
+    <div class="break-inside-avoid  h-[260px] flex justify-center items-center text-white bg-blue-400 p-20 mb-10 text-2xl rounded-2xl">
+      3
+    </div>
+    <div class="break-inside-avoid h-[290px] flex justify-center items-center text-white bg-blue-400 p-20 mb-10 text-2xl rounded-2xl">
+      4
+    </div>
+    <div class="break-inside-avoid h-[130px] flex justify-center items-center text-white bg-blue-400 p-20 mb-10 text-2xl rounded-2xl">
+      5
+    </div>
+    <div class="break-inside-avoid  h-[220px] flex justify-center items-center text-white bg-blue-400 p-20 mb-10 text-2xl rounded-2xl">
+      6
+    </div>
+    <div class="break-inside-avoid  h-[220px] flex justify-center items-center text-white bg-blue-400 p-20 mb-10 text-2xl rounded-2xl">
+      7
+    </div>
+    <div class="break-inside-avoid  h-[320px] flex justify-center items-center text-white bg-blue-400 p-20 mb-10 text-2xl rounded-2xl">
+      8
+    </div>
+  </div>
+</div>
+
+@include('partials/footer')
