--- a/camping/resources/views/partials/adminheader.edge
+++ b/camping/resources/views/partials/adminheader.edge
@@ -31,6 +31,7 @@
   <ul class="flex gap-x-4">
     <li>Ayarlar</li>
     <li><a href="/admin/slider">Slider</a></li>
+    <li><a href="/admin/facilities">Facilities</a></li>
     <li><a href="/" target="_blank">Arayüz</a></li>
   </ul>
 </header>
