--- a/camping/resources/views/auth/slider.edge
+++ b/camping/resources/views/auth/slider.edge
@@ -32,6 +32,34 @@
         </form>
       </div>
     </fieldset>
+    <table class="w-full mt-2">
+      <thead class="border bg-slate-100">
+        <tr class="">
+          <th class="p-1" scope="col">Id</th>
+          <th scope="col">Baslik</th>
+          <th scope="col">Aciklama</th>
+          <th scope="col">Resim</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        @each(item in sliders)
+        <tr class="border text-center">
+          <th class="border">{{item.id}}</th>
+          <td class="border">{{item.baslik}}</td>
+          <td class="border">{{item.aciklama}}</td>
+          <td class="border flex items-center justify-center p-1">
+            <a href="{{item.resim}}" data-fslightbox="gallery">
+              <img class="w-[200px] img-fluid" src="{{item.resim}}" />
+            </a>
+          </td>
+          <td class="border">
+            <a href="/admin/slider/{{item.id}}" class="bg-red-500 inline-block p-1 px-10 m-1 text-white hover:bg-red-700 duration-200">Sil</a>
+            </td>
+        </tr>
+      @endeach
+      </tbody>
+    </table>
   </div>
 
 @include('partials/adminfooter')
