admin blog-post started

--- a/camping/resources/views/partials/adminheader.edge
+++ b/camping/resources/views/partials/adminheader.edge
@@ -33,6 +33,7 @@
     <li>Ayarlar</li>
     <li><a href="/admin/slider">Slider</a></li>
     <li><a href="/admin/facilities">Facilities</a></li>
+    <li><a href="/admin/blogposts">Blog Posts</a></li>
     <li><a href="/" target="_blank">Arayüz</a></li>
   </ul>
 </header>
