blogposts ekleme ekranı yapıldı

--- a/camping/resources/views/about_us.edge
+++ b/camping/resources/views/about_us.edge
@@ -1,6 +1,6 @@
 @include('partials/header')
 {{--  banner  --}}
-<div id="banner" class="relative h-[371px]">
+<div id="banner" class="relative mt-[86px] h-[371px]">
   <div class="w-full h-full bg-black absolute z-10 bg-opacity-60"></div>
   <img src="/uploads/about-banner.jpg" alt="" class="absolute w-full h-full">
   <div class="relative z-20 flex justify-center items-center w-full h-full flex-col">
