--- a/camping/resources/views/auth/login.edge
+++ b/camping/resources/views/auth/login.edge
@@ -1,6 +1,6 @@
 @include('partials/header')
 
-<div class="max-w-7xl mx-auto">
+<div class="max-w-7xl mt-[100px] mx-auto">
   <div class="shadow m-10 h-[400px] w-full flex items-center justify-center">
     <form action="/login" method="POST">
       <div>
