--- a/camping/resources/views/blog.edge
+++ b/camping/resources/views/blog.edge
@@ -1,6 +1,6 @@
 @include('partials/header')
 
-<div id="banner">
+<div id="banner" class="mt-[86px]">
   <div class="bg-[rgba(239,236,230,.6)] h-[200px]">
     <div class="max-w-7xl mx-auto h-full flex items-center justify-between">
       <div>
