--- a/camping/resources/views/gallery.edge
+++ b/camping/resources/views/gallery.edge
@@ -2,7 +2,7 @@
 
 
 {{--  galery  --}}
-<div class="max-w-7xl mx-auto py-20 h-full">
+<div class="max-w-7xl mt-[86px] mx-auto py-20 h-full">
   <div class="grid-cols-1 md:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 gap-10 p-10 columns-[300px]">
     <div class="break-inside-avoid h-[420px] flex justify-center items-center text-white bg-yellow-400 p-20 mb-10 text-2xl rounded-2xl">
       1
