--- a/camping/resources/views/partials/footer.edge
+++ b/camping/resources/views/partials/footer.edge
@@ -2,6 +2,18 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+<script>
+var prevScrollpos = window.pageYOffset;
+window.onscroll = function() {
+  var currentScrollPos = window.pageYOffset;
+  if (prevScrollpos > currentScrollPos) {
+    document.getElementById("header").classList.remove("slide-up");
+  } else {
+    document.getElementById("header").classList.add("slide-up");
+  }
+  prevScrollpos = currentScrollPos;
+}
+</script>
 
 </body>
 </html>
