--- a/camping/resources/views/activities.edge
+++ b/camping/resources/views/activities.edge
@@ -1,6 +1,6 @@
 @include('partials/header')
 {{--  banner  --}}
-<div id="banner" class="relative h-[371px]">
+<div id="banner" class="relative mt-[86px] h-[371px]">
   <div class="w-full h-full bg-black absolute z-10 bg-opacity-60"></div>
   <img src="https://kamperen.qodeinteractive.com/wp-content/uploads/2021/06/Activities-title-img.jpg" alt="" class="absolute w-full h-full">
   <div class="relative z-20 flex justify-center items-center w-full h-full flex-col">
