--- a/camping/resources/views/contact.edge
+++ b/camping/resources/views/contact.edge
@@ -1,6 +1,6 @@
 @include('partials/header')
 {{--  banner  --}}
-<div id="banner" class="relative h-[371px]">
+<div id="banner" class="relative mt-[86px] h-[371px]">
   <div class="w-full h-full bg-black absolute z-10 bg-opacity-60"></div>
   <img src="https://images.unsplash.com/photo-1696928634052-41aa345ef686?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" height="500" alt="" class="absolute w-full h-full">
   <div class="relative z-20 flex justify-center items-center w-full h-full flex-col">
