--- a/camping/resources/views/partials/header.edge
+++ b/camping/resources/views/partials/header.edge
@@ -23,10 +23,15 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer"
   />
+  <style>
+  .slide-up {
+    transform: translateY(-86px);
+  }
+  </style>
 </head>
 <body>
-<header class="h-[86px] flex justify-between items-center px-6 relative z-[9999]">
-  <div class="flex gap-x-2 items-end bg-white">
+<header id="header" class="h-[86px] shadow-lg flex bg-white justify-between items-center px-6 z-[9999] fixed top-0 w-full transition-transform duration-300 ease-in-out transform translate-y-0">
+  <div class="flex gap-x-2 items-end ">
     <div class="text-2xl font-semibold"><a href="/">Camping</a></div>
     <div class="ml-10 pr-4">
       <ul class="flex gap-20">
