--- a/camping/resources/views/auth/login.edge
+++ b/camping/resources/views/auth/login.edge
@@ -5,11 +5,11 @@
     <form action="/login" method="POST">
       <div>
         <label class="block">Username</label>
-        <input type="text" class="border" name="username" id="username">
+        <input type="text" class="border outline-none p-2" name="username" id="username">
       </div>
       <div>
         <label class="block">Password</label>
-        <input class="border" type="password" name="password" id="password">
+        <input class="border outline-none p-2" type="password" name="password" id="password">
       </div>
       <div>
         <input type="submit" value="Login" class="bg-blue-500 hover:bg-blue-700 duration-300 mt-2 w-full p-2 text-white cursor-pointer">
