--- a/camping/resources/views/home.edge
+++ b/camping/resources/views/home.edge
@@ -64,20 +64,21 @@
 <div class="max-w-7xl mx-auto mt-20 mb-12">
   <div class="grid grid-cols-3 gap-8">
     @each(item in posts)
+    <a href="/post/{{ item.slug }}">
       <div class="flex flex-col text-center items-center border rounded">
-        <div>
-          <img src="{{ item.post_image }}" alt="">
+        <div class="overflow-hidden">
+          <img class="hover:scale-110 duration-300" src="{{ item.post_image }}" alt="{{ item.title }}">
         </div>
         <div class="px-4 mb-2">
           <h1 class="mt-6 mb-4 text-[30px] font-semibold">{{ item.title }}</h1>
         <h2 class="text-[15px] text-gray-600">{{ item.content }}</h2>
         </div>
       </div>
+    </a>
     @endeach
   </div>
 </div>
 
-{{--  instagram posts started  --}}
 
 
 @include('partials/footer')
