--- a/camping/resources/views/home.edge
+++ b/camping/resources/views/home.edge
@@ -72,6 +72,9 @@
         <div class="px-4 mb-2">
           <h1 class="mt-6 mb-4 text-[30px] font-semibold">{{ item.title }}</h1>
         <h2 class="text-[15px] text-gray-600">{{ item.content }}</h2>
+        <div class="mt-2">
+          <button class="uppercase text-[13px] group">Read More <i class="fa-solid fa-arrow-right-long group-hover:ml-1 duration-200"></i></button>
+        </div>
         </div>
       </div>
     </a>
