--- a/camping/resources/views/partials/header.edge
+++ b/camping/resources/views/partials/header.edge
@@ -23,6 +23,17 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer"
   />
+  <!-- Main Quill library -->
+<script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
+<script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
+
+<!-- Theme included stylesheets -->
+<link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+<link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+
+<!-- Core build with no theme, formatting, non-essential modules -->
+<link href="//cdn.quilljs.com/1.3.6/quill.core.css" rel="stylesheet">
+<script src="//cdn.quilljs.com/1.3.6/quill.core.js"></script>
   <style>
   .slide-up {
     transform: translateY(-86px);
@@ -45,7 +56,7 @@
         </a>
       </li>
         <li class="uppercase hover:border-b hover:border-black duration-300 px-4 {{title === 'gallery' ? 'border-b border-black' : ''}}"><a href="/gallery">gallery</a></li>
-        <li class="uppercase hover:border-b hover:border-black duration-300 px-4 {{title === 'blog' ? 'border-b border-black' : ''}}"><a href="/blog">blog</a></li>
+        {{--  <li class="uppercase hover:border-b hover:border-black duration-300 px-4 {{title === 'blog' ? 'border-b border-black' : ''}}"><a href="/blog">blog</a></li>  --}}
       </ul>
     </div>
   </div>
