--- a/camping/resources/views/auth/facilities.edge
+++ b/camping/resources/views/auth/facilities.edge
@@ -43,7 +43,7 @@
             <td class="border">{{item.class_name}}</td>
             <td class="border"><i class="{{item.class_name}}"></i></td>
             <td class="border">
-              <a href="/facilities/{{item.id}}" class="bg-red-500 inline-block p-1 px-10 m-1 text-white hover:bg-red-700 duration-200">Sil</a>
+              <a href="/admin/facilities/{{item.id}}" class="bg-red-500 inline-block p-1 px-10 m-1 text-white hover:bg-red-700 duration-200">Sil</a>
               </td>
           </tr>
         @endeach
