--- a/camping/resources/views/partials/adminheader.edge
+++ b/camping/resources/views/partials/adminheader.edge
@@ -6,8 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Camping</title>
+
   @entryPointScripts('app')
   @entryPointStyles('app')
+
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 
   <link
   rel="stylesheet"
